bug fix and content update

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
         </div>
      </header>
 
-     <section class="section-about">
+    <section class="section-about">
         <div class="container">
             <h2 class="section-common-heading">About Tarun EduHub</h2>
             <p class="section-common-subheading">Guiding Your Learning Journey throught Research, Desing and Development Excellence.</p>
@@ -40,27 +40,27 @@
                 </div>
                 <h3 class="section-common--title">Research</h3>
                 <p>
-                    We Start by learining what you need. We look at what's new and exciting in learining and choose topics that match what you want to learn.
+                    We start by understanding your learning needs. Then, we explore the latest trends and innovations in education to select topics that align with your interests and goals.
                 </p>
             </div>
 
-            <div class="about-div">
+            <div class="about-div" data-aos="fade-up">
                 <div class="icon">
                     <img src="./images/dev.png" alt="Tarun EduHub Development"/>
                 </div>
                 <h3 class="section-common--title">Development</h3>
                 <p>
-                    We Start by learining what you need. We look at what's new and exciting in learining and choose topics that match what you want to learn.
+                    Once we know what you want to learn, we design engaging and effective learning experiences. We create content, tools, and activities that help you build skills step by step.
                 </p>
             </div>
 
-            <div class="about-div">
+            <div class="about-div" data-aos="fade-up">
                 <div class="icon">
                     <img src="./images/design.png" alt="Tarun EduHub design"/>
                 </div>
                 <h3 class="section-common--title">Design</h3>
                 <p>
-                    We Start by learining what you need. We look at what's new and exciting in learining and choose topics that match what you want to learn.
+                    We bring ideas to life through thoughtful design. Using visuals, structure, and interactivity, we make learning clear, engaging, and easy to follow.
                 </p>
             </div>
         </div>
