--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
                 </div>
                 <h3 class="section-common--title">JavaScript</h3>
                 <p>
-                    We Start by learining what you need. We look at what's new and exciting in learining and choose topics that match what you want to learn.
+                    We start by understanding what you want to learn. Then, we explore the latest trends and exciting developments in JavaScript to select topics that align with your goals and interests.
                 </p>
             </div>
 
@@ -50,7 +50,7 @@
                 </div>
                 <h3 class="section-common--title">Python</h3>
                 <p>
-                    We Start by learining what you need. We look at what's new and exciting in learining and choose topics that match what you want to learn.
+                    We begin by identifying your learning goals. Then, we explore the latest tools and techniques in Python to craft lessons that are practical, relevant, and tailored to your needs.
                 </p>
             </div>
 
@@ -60,7 +60,7 @@
                 </div>
                 <h3 class="section-common--title">Golang</h3>
                 <p>
-                    We Start by learining what you need. We look at what's new and exciting in learining and choose topics that match what you want to learn.
+                    We start by understanding your objectives. Then, we dive into the latest practices and powerful features of Golang to design learning paths that help you write efficient, scalable, and clean code.
                 </p>
             </div>
 
@@ -70,7 +70,7 @@
                 </div>
                 <h3 class="section-common--title">Java</h3>
                 <p>
-                    We Start by learining what you need. We look at what's new and exciting in learining and choose topics that match what you want to learn.
+                    We begin by learning what you aim to achieve. Then, we explore modern Java concepts, tools, and frameworks to create a learning journey that builds strong, real-world programming skills.
                 </p>
             </div>
         </div>
