added section scroll for few section and renamed blog to projects

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">service</a></li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="project.html">projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
                 </ul>
             </nav>
@@ -99,7 +99,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="service.html">Service</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="project.html">Projects</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 
@@ -116,12 +116,12 @@
                 
             </div>
             <div class="footer-4-div">
-                <p class="footer-subheading">Blogs</p>
+                <p class="footer-subheading">Projects</p>
                     <ul>
-                        <li><a href="blog.html">code your first react app</a></li>
-                        <li><a href="blog.html">code your javascript</a></li>
-                        <li><a href="blog.html">Learn to use Express.js</a></li>
-                        <li><a href="blog.html">Become 4x Engineer with Ai</a></li>
+                        <li><a href="project.html">Code your first react app</a></li>
+                        <li><a href="project.html">Code your javascript</a></li>
+                        <li><a href="project.html">Learn to use Express.js</a></li>
+                        <li><a href="project.html">Become 4x Engineer with Ai</a></li>
                     </ul>
             </div>
         </div>
