--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Nav -->
-     <header class="section-navbar">
+     <header class="section-navbar" id="Home">
         <div class="container">
             <div class="navbar-brand">
                 <a href="index.html">
@@ -21,9 +21,9 @@
             <nav class="navbar">
                 <ul>
                     <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-                    <li class="nav-item"><a class="nav-link" href="service.html">service</a></li>
-                    <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about.html">about</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#service.html">service</a></li>
+                    <li class="nav-item"><a class="nav-link" href="project.html">projects</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
                 </ul>
             </nav>
@@ -57,7 +57,7 @@
         </div>
      </main>
 
-     <section class="section-about" data-aos="fade-up">
+     <section class="section-about" id="about.html" data-aos="fade-up">
         <div class="container">
             <h2 class="section-common-heading">About Tarun EduHub</h2>
             <p class="section-common-subheading">Guiding Your Learning Journey throught Research, Desing and Development Excellence.</p>
@@ -95,7 +95,7 @@
         </div>
      </section>
 
-     <section class="section-course" data-aos="fade-up">
+     <section class="section-course" id="service.html" data-aos="fade-up">
         <div class="container">
             <h2 class="section-common-heading">Explore Our Courses</h2>
             <p class="section-common-subheading">Discover a variety of courses across different categories.</p>
@@ -143,7 +143,7 @@
         </div>
      </section>
 
-     <section class="section-why--choose" data-aos="fade-up">
+     <section class="section-why--choose" id="whychoose" data-aos="fade-up">
         <div class="container">
             <h2 class="section-common-heading">Why Choose Tarun EduHub</h2>
             <p class="section-common-subheading">Choose Tarun EduHub for a holistic, enriching learning experience that empowers you to achieve your goals.</p>
@@ -249,10 +249,10 @@
             <div class="footer-2-div">
                 <p class="footer-subheading">Links</p>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#Home">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="service.html">Service</a></li>
-                        <li><a href="blog.html">Blog</a></li>
+                        <li><a href="project.html">Projects</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 
@@ -260,21 +260,21 @@
             <div class="footer-3-div">
                 <p class="footer-subheading">Courses</p>
                     <ul>
-                        <li><a href="https://www.geeksforgeeks.org/">Python</a></li>
-                        <li><a href="https://www.geeksforgeeks.org/">Java</a></li>
-                        <li><a href="https://www.geeksforgeeks.org/">CSS</a></li>
-                        <li><a href="https://www.geeksforgeeks.org/">HTML</a></li>
-                        <li><a href="https://www.geeksforgeeks.org/">Golang</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/python/python-programming-language-tutorial/" target="_blank" rel="noopener noreferrer">Python</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/java/java/" target="_blank" rel="noopener noreferrer">Java</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/css/css-tutorial/" target="_blank" rel="noopener noreferrer">CSS</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/html/html-tutorial/" target="_blank" rel="noopener noreferrer">HTML</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/go-language/golang-tutorial-learn-go-programming-language/" target="_blank" rel="noopener noreferrer">Golang</a></li>
                     </ul>
                 
             </div>
             <div class="footer-4-div">
-                <p class="footer-subheading">Blogs</p>
+                <p class="footer-subheading">Projects</p>
                     <ul>
-                        <li><a href="blog.html">code your first react app</a></li>
-                        <li><a href="blog.html">code your javascript</a></li>
-                        <li><a href="blog.html">Learn to use Express.js</a></li>
-                        <li><a href="blog.html">Become 4x Engineer with Ai</a></li>
+                        <li><a href="project.html">Code your first react app</a></li>
+                        <li><a href="project.html">Code your javascript</a></li>
+                        <li><a href="project.html">Learn to use Express.js</a></li>
+                        <li><a href="project.html">Become 4x Engineer with Ai</a></li>
                     </ul>
             </div>
         </div>
