fix footer and added links to the deployed projects

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         </div>
      </div>
 
-     <footer>
+    <footer>
         <div class="container grid grid-four--cols">
             <div class="footer-1--div">
                 <div class="logo-brand">
@@ -271,14 +271,14 @@
             <div class="footer-4-div">
                 <p class="footer-subheading">Projects</p>
                     <ul>
-                        <li><a href="project.html">Code your first react app</a></li>
-                        <li><a href="project.html">Code your javascript</a></li>
-                        <li><a href="project.html">Learn to use Express.js</a></li>
-                        <li><a href="project.html">Become 4x Engineer with Ai</a></li>
+                        <li><a href="project.html">News App</a></li>
+                        <li><a href="project.html">Text Editor</a></li>
+                        <li><a href="project.html">TS Website</a></li>
+                        <li><a href="project.html">Nike Page</a></li>
                     </ul>
             </div>
         </div>
-     </footer>
+    </footer>
        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
         <script>
             AOS.init();
