--- a/service.html
+++ b/service.html
@@ -93,31 +93,31 @@
         </div>
      </div>
 
-     <footer>
+    <footer>
         <div class="container grid grid-four--cols">
             <div class="footer-1--div">
                 <div class="logo-brand">
-                    <a href="/" class="footer-subheading">Tarun EduHub</a>
+                    <a href="index.html" class="footer-subheading">Tarun EduHub</a>
                 </div>
                 <p>Let's revolutionize the way you study with Tarun EduHub</p>
             
                 <div class="social-footer--ioncs">
-                    <a href="/" target="_blank">
+                    <a href="https://discord.com/" target="_blank">
                         <i class="fa-brands fa-discord"></i>
                     </a>
-                    <a href="/" target="_blank">
+                    <a href="https://www.youtube.com/" target="_blank">
                         <i class="fa-brands fa-youtube"></i>
                     </a>
-                    <a href="/" target="_blank">
+                    <a href="https://www.instagram.com/" target="_blank">
                         <i class="fa-brands fa-instagram"></i>
                     </a>
                 </div>
             </div>
 
             <div class="footer-2-div">
-                <p class="footer-subheading"> Links</p>
+                <p class="footer-subheading">Links</p>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#Home">Home</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="service.html">Service</a></li>
                         <li><a href="project.html">Projects</a></li>
@@ -128,21 +128,21 @@
             <div class="footer-3-div">
                 <p class="footer-subheading">Courses</p>
                     <ul>
-                        <li><a href="index.html">Python</a></li>
-                        <li><a href="index.html">Java</a></li>
-                        <li><a href="index.html">CSS</a></li>
-                        <li><a href="index.html">HTML</a></li>
-                        <li><a href="index.html">Golang</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/python/python-programming-language-tutorial/" target="_blank" rel="noopener noreferrer">Python</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/java/java/" target="_blank" rel="noopener noreferrer">Java</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/css/css-tutorial/" target="_blank" rel="noopener noreferrer">CSS</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/html/html-tutorial/" target="_blank" rel="noopener noreferrer">HTML</a></li>
+                        <li><a href="https://www.geeksforgeeks.org/go-language/golang-tutorial-learn-go-programming-language/" target="_blank" rel="noopener noreferrer">Golang</a></li>
                     </ul>
                 
             </div>
             <div class="footer-4-div">
                 <p class="footer-subheading">Projects</p>
                     <ul>
-                        <li><a href="project.html">Code your first react app</a></li>
-                        <li><a href="project.html">Code your javascript</a></li>
-                        <li><a href="project.html">Learn to use Express.js</a></li>
-                        <li><a href="project.html">Become 4x Engineer with Ai</a></li>
+                        <li><a href="project.html">News App</a></li>
+                        <li><a href="project.html">Text Editor</a></li>
+                        <li><a href="project.html">TS Website</a></li>
+                        <li><a href="project.html">Nike Page</a></li>
                     </ul>
             </div>
         </div>
