--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         <div class="container grid grid-four--cols">
             <div class="footer-1--div">
                 <div class="logo-brand">
-                    <a href="index.html" class="footer-subheading">Tarun EduHub</a>
+                    <a href="#Home" class="footer-subheading">Tarun EduHub</a>
                 </div>
                 <p>Let's revolutionize the way you study with Tarun EduHub</p>
             
